fix: modified Phases: EventHandler